--- a/src/routes/song-2/style.css
+++ b/src/routes/song-2/style.css
@@ -1,6 +1,7 @@
 .song {
 	grid-area: song;
 
+	position: relative;
 
 	padding: 1rem;
 
@@ -12,4 +13,31 @@
 
 .song p, .song a {
 	font-weight: 900;
+}
+
+#frame {
+	-ms-zoom: 4;
+	-moz-transform: scale(4);
+	-moz-transform-origin: 0 0;
+	-o-transform: scale(4);
+	-o-transform-origin: 0 0;
+	-webkit-transform: scale(4);
+	-webkit-transform-origin: 0 0;
+
+	position: relative;
+	left: -30px;
+	top: -30px;
+}
+
+.sound {
+	position: absolute;
+	top: 3rem;
+	right: 1rem;
+	background: black;
+	border-radius: 50%;
+	height: 100px;
+	width: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
